# thrml_obamify

./: .gitignore  README.md  clean-history.sh  environment-macos-metal.yml  environment-windows-cpu.yml  pyproject.toml
src/thrml_obamify/: __init__.py  cli.py  energy.py  graph.py  io.py  palette.py  pipeline.py  sampler.py
src/thrml_obamify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_graph.py  test_palette.py
